# Projeto-Banco-de-Dados

./: Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  var.env
src/: app.rs  lib.rs
src/components/: CaseCard.tsx  ClientCard.tsx  DocumentCard.tsx
src/routes/: __layout.tsx  index.rs  index.tsx
src/routes/api/: advogados.rs  casos.rs  categorias_caso.rs  clientes.rs  documentos.rs  init_clean.rs  ollama.rs  post_test.rs  status.rs  varas_judiciais.rs
src/routes/casos/: [id].tsx  index.rs  index.tsx  new.tsx
src/routes/casos/edit/: [id].tsx
src/routes/clientes/: [id].tsx  index.rs  index.tsx  new.tsx
src/routes/clientes/edit/: [id].tsx
src/routes/configuracoes/: index.tsx
src/routes/documentos/: [id].tsx  index.rs  index.tsx  new.tsx
src/routes/documentos/edit/: [id].tsx
src/routes/ia-integrada/: index.rs  index.tsx
src/routes/relatorios/: index.rs  index.tsx
src/styles/: global.css
