[package]
name = "tuono-app"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.19.7"
serde = { version = "1.0.202", features = ["derive"] }
reqwest = "0.12.20"

tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.0"


futures = "0.3.30"
base64 = "0.22.0"
mime_guess = "2.0.4"